--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://myblog.***.***" # the base hostname & protocol for your site
+url: "http://marshallshen.github.io/conway"
 baseurl: ""
 
 # social icons and sharing options
