--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author_image: "/assets/images/author.jpg"
 paginate:	5
 
 url: "http://marshallshen.github.io/conway"
-baseurl: "/conway"
+baseurl: ""
 
 # social icons and sharing options
 social:
