--- a/_config.yml
+++ b/_config.yml
@@ -3,23 +3,24 @@ markdown: redcarpet
 highlighter: pygments
 
 # Site settings
-title: "Conway"
+title: "Blog of Random Things"
 description: >
-   Share Ideas About World
+   Blog of Random Things
 
 email: shen.marshall@gmail.com
 #blog logo
-logo: "assets/images/df_logo.jpg"
+logo: "assets/images/conway_square.png"
+ico: "assets/images/conway.ico"
 # blog cover
-cover: "assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+cover: "assets/images/conway.jpg"
 
-name: 'Dirk Fabisch'
-author: 'Dirk Fabisch'
+name: 'Marshall Shen'
+author: 'Marshall Shen'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://marshallshen.github.io/conway"
+url: "http://www.getconway.com"
 baseurl: ""
 
 # social icons and sharing options
